--- a/Anton_kod/Database.html
+++ b/Anton_kod/Database.html
@@ -35,18 +35,30 @@
       <div class="row">
             <div id="chartdiv" class="column"></div>
             <div id="scatter" class="column">
-                <button onclick="displayDate()">Change is gonna come</button>
-                <button onclick="function_draw()">Change is coming</button>
-            <input type="text" id="year" name="year" required minlength="4" maxlength="8" size="10"> 
+                <button onclick="displayDate()">Query av datat</button>
+            <input type="text" id="year_min" name="year" required minlength="4" maxlength="8" size="10"> 
+            <input type="text" id="year_max" name="year" required minlength="4" maxlength="8" size="10"> 
             <input type="text" id="name" name="name" required minlength="4" maxlength="15" size="10"> 
                 <form>
                       <select id="mySelect">
-                          <option>Fråga1</option>
-                          <option>Fråga2</option>
-                          <option>Fråga3</option>
-                          <option>Fråga4</option>
+                          <option value = 1>Fråga1</option>
+                          <option value = 2>Fråga2</option>
+                          <option value = 4>Fråga4</option>
+                          <option value = 5>Fråga5</option>
+                          <option value = 16>Fråga16</option>
+                          <option value = 42>Fråga42</option>
+                          <option value = 47>Fråga47</option>
+                          <option value = 48>Fråga48</option>
+                          <option value = 0>Alla frågor</option>
                       </select>
                 </form>
+                <form>
+                    <select id="mySex">
+                        <option value = "Totalt">Totalt</option>
+                        <option value = "Man">Man</option>
+                        <option value = "Kvinnor">Kvinna</option>
+                    </select>
+              </form>
             </div>      
       </div> 
 
